hidding shortcuts in index.html

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                          <li><a href="#prizes">Prizes</a></li>              </ul>
                      </li>-->
                   <li role="presentation"><a href="#about">About</a></li>
-                  <li role="presentation"><a href="#publications">Publications</a></li>
-                  <li role="presentation"><a href="#participation">Participation</a></li>
-                  <li role="presentation"><a href="#dates">Timeline</a></li>
+                  <!--<li role="presentation"><a href="#publications">Publications</a></li>
                   <li role="presentation"><a href="#program">Program</a></li>
+                  <li role="presentation"><a href="#participation">Participation</a></li>-->
+                  <li role="presentation"><a href="#dates">Timeline</a></li>
                   <li role="presentation"><a href="#organizers">Organizers</a></li>
                   <li role="presentation"><a href="https://recsys.acm.org/recsys19/" style="color:lightgray;"
                      target="\_blank">RecSys 2019</a></li>
