Added new member

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                <li><a href="https://about.me/wolfganggassler" target="\_blank">Wolfgang Gassler</a>, trivago, Germany</li>
                <li><a href="https://www.linkedin.com/in/jensadamczak/" target="\_blank">Jens Adamczak</a>, trivago, Germany</li>
                <li>Gerard Leyson, trivago, Germany</li>
+	       <li><a href="https://www.linkedin.com/in/david-zibriczky/" target="\_blank">Dávid Zibriczky</a>, DB Schenker, Germany</li>
                <li><a href="https://www.ifs.tuwien.ac.at/~knees/" target="\_blank">Peter Knees</a>, TU Wien, Austria</li>
                <li><a href="https://yasdel.github.io" target="\_blank">Yashar Deldjoo</a>, University of Milano Bicocca, Italy</li>
                <li><a href="http://www.aifb.kit.edu/web/Farshad_Bakhshandegan_Moghaddam" target="\_blank">Farshad Bakhshandegan Moghaddam</a>, Karlsruhe Institute of Technology, Germany</li>
