--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                <tbody>
                   <tr>
                      <td>January 2019</td>
-                     <td><strong>Release of the Dataset</strong>
+                     <td><strong>Release of the Dataset</strong></br>			
+                     <font color="red">Note: the dataset is currently under final checks and being finalized. Stay tuned!</font>
                      </td>
                   </tr>
                   <tr>
