--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <tr>
                      <td>January 2019</td>
                      <td><strong>Release of the Dataset</strong></br>			
-                     <font color="magenta">Note: the dataset is currently under final checks and being finalized. Stay tuned!</font>
+                     <font color="green">Note: the dataset is currently under final checks and being finalized. Stay tuned!</font>
                      </td>
                   </tr>
                   <tr>
