update the timeline and start the challenge

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                      </li>-->
                   <li role="presentation"><a href="#about">About</a></li>
                   <!--<li role="presentation"><a href="#publications">Publications</a></li>
-                  <li role="presentation"><a href="#program">Program</a></li>
-                  <li role="presentation"><a href="#participation">Participation</a></li>-->
+                  <li role="presentation"><a href="#program">Program</a></li>-->
+                  <li role="presentation"><a href="#participation">Participation</a></li>
                   <li role="presentation"><a href="#dates">Timeline</a></li>
                   <li role="presentation"><a href="#organizers">Organizers</a></li>
                   <li role="presentation"><a href="https://recsys.acm.org/recsys19/" style="color:lightgray;"
@@ -62,8 +62,16 @@
             <p> In the challenge, participants will be tasked with predicting which accommodations (items) have been clicked in the search result during the last part of a user session in an offline evaluation setup. To this end, trivago will release a public dataset of hotel search sessions. </p>
             <p>A detailed description of the challenge will be made available soon (see tentative timeline).</p>
          </div>
+         <div id="participation" class="lead" align="justify">
+            <h1>Participation and Data</h1>
+            <p> The data for this year's challenge is provided by trivago and can be
+              downloaded from <a target="\_blank" href="https://recsys.trivago.cloud/">https://recsys.trivago.cloud/</a>.
+              You can access the data once you create an account and agree with the terms and conditions. The information on the challenge participation
+              can also be found on this website.</p>
+          </div>
          <div id="dates">
-            <h1>Timeline (tentative)<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span> top</a></sup></h1>
+            <h1>Timeline<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span> top</a></sup></h1>
+            <p><font size="5">Note: the timeline is subject to slight modifications.</font></p>
             <table class="table table-striped lead">
                <thead>
                   <tr>
@@ -72,25 +80,27 @@
                   </tr>
                </thead>
                <tbody>
-                  <tr>
-                     <td>January 2019</td>
-                     <td><strong>Release of the Dataset</strong></br>			
-                     <font color="green">Note: the dataset is currently under final checks and being finalized. Stay tuned!</font>
+                  <!-- <tr>
+                     <td>January, Febr 2019</td>
+                     <td><strong>Release of the Dataset</strong></br>                                            
                      </td>
-                  </tr>
+                  </tr> -->
                   <tr>
-                     <td>February 2019</td>
+                     <td>March 2019</td>
                      <td>
-                        <strong>RecSys Challenge starts</strong>
+                        <strong>Dataset Release & RecSys Challenge starts</strong>                        
                         <ul>
-                           <li>Submission system will be available for offline evaluation.</li>
-                           <li>A daily leaderboard will be available once the challenge starts.</li>
-                        </ul>
+                              <li>The data can be downloaded from <a target="\_blank" href="https://recsys.trivago.cloud/">https://recsys.trivago.cloud/</a>.</li>
+                        </ul>                        		
+                        <font color="green"><strong>The website will go live on March 05.</strong></font>   
                      </td>
                   </tr>
                   <tr>
-                     <td>June 2019</td>
-                     <td> <strong>Challenge ends</strong> </td>
+                     <td>June 30, 2019</td>
+                     <td> <strong>RecSys Challenge ends</strong> 
+                     </br>			
+                     <font color="green"><strong>Final submission due (11:59 PM in the UTC-12:00 time zone).</strong></font>
+                     </td>
                   </tr>
                   <tr>
                      <td>July 2019</td>
