added publications tab

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                          <li><a href="#prizes">Prizes</a></li>              </ul>
                      </li>-->
                   <li role="presentation"><a href="#about">About</a></li>
-                  <!--<li role="presentation"><a href="#publications">Publications</a></li>
-                  <li role="presentation"><a href="#program">Program</a></li>-->
+                  <li role="presentation"><a href="#publications">Publications</a></li>
+                  <!--<li role="presentation"><a href="#program">Program</a></li>-->
                   <li role="presentation"><a href="#participation">Participation</a></li>
                   <li role="presentation"><a href="#dates">Timeline</a></li>
                   <li role="presentation"><a href="#organizers">Organizers</a></li>
@@ -62,6 +62,10 @@
             <p> In the challenge, participants will be tasked with predicting which accommodations (items) have been clicked in the search result during the last part of a user session in an offline evaluation setup. To this end, trivago will release a public dataset of hotel search sessions. </p>
             <p>A detailed description of the challenge will be made available soon (see tentative timeline).</p>
          </div>
+         <div id="Publications" class="lead" align="justify">
+               <h1>Publications</h1>
+               <p> A novel view paper will be provided soon.</p>
+             </div>
          <div id="participation" class="lead" align="justify">
             <h1>Participation and Data</h1>
             <p> The data for this year's challenge is provided by trivago and can be
