added publications tab

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          </div>
          <div id="Publications" class="lead" align="justify">
                <h1>Publications</h1>
-               <p> A novel view paper will be provided soon.</p>
+               <p>An overview paper will be provided soon to the participants.</p>
              </div>
          <div id="participation" class="lead" align="justify">
             <h1>Participation and Data</h1>
