added paper submission guidlines

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
          <p> In the challenge, participants will be tasked with predicting which accommodations (items) have been
             clicked in the search result during the last part of a user session in an offline evaluation setup. To this
             end, trivago will release a public dataset of hotel search sessions. </p>
-         <p>A detailed description of the challenge will be made available soon (see tentative timeline).</p>
+         <p>The workshop will feature presentations of accepted contributions to the RecSys Challenge 2019.</p>
       </div>
       <div id="Publications" class="lead" align="justify">
          <h1>Publications</h1>
@@ -156,8 +156,8 @@
                   </td>
                </tr>
                <tr>
-                  <td>September 16-20, 2019</td>
-                  <td>Workshop will take place as part of the <a href="https://recsys.acm.org/recsys19/">ACM RecSys
+                  <td>September 20, 2019</td>
+                  <td>Workshop taking place as part of the <a href="https://recsys.acm.org/recsys19/">ACM RecSys
                         conference</a> in Copenhagen, Denmark.
                   </td>
                </tr>
@@ -198,12 +198,12 @@
             <li>Accepted papers must be presented in the RecSys Challenge Workshop (either as an oral presentation or
                poster).</li>
          </ul>
-         The workshop will feature presentations of accepted contributions to the RecSys Challenge 2019 organized by
+         <!-- The workshop will feature presentations of accepted contributions to the RecSys Challenge 2019 organized by
          trivago, TU Wien, Polytechnic University of Bari, and Karlsruhe Institute of Technology. In the challenge,
          which originates from the domain of online travel recommender systems, participants have to build a
          click-prediction model based on user session interactions. All submissions presented in the workshop will have
          gone through a thorough paper review process and describe the best performing or otherwise notable approaches
-         submitted to the challenge.
+         submitted to the challenge. -->
          </br></br>
 
          <font color="green"><strong>Link to the workshop website:</strong></font></br>
@@ -237,7 +237,7 @@
                      <strong>Paper Session 1 (each 25+5’)</strong>:
                      <ul class="lead">
                         <li>Boosting algorithms for session-based, context-aware recommender system in online travel domain. <i>Paweł Jankiewicz (LogicAI)</i></li>
-                        <li>Deep and Classical Re-Ranking of Online Recommendations using Contextualized Session-Based Feedback. <i>Felipe Perez (Layer 6 AI)</i></li>                        
+                        <li>Robust Contextual Models for In-Session Personalization. <i>Felipe Perez (Layer 6 AI)</i></li>                        
                      </ul>
                   </td>
                </tr>
@@ -252,7 +252,7 @@
                      <strong>Paper Session 2 (each 25+5’)</strong>:
                      <ul class="lead">
                         <li>Session-based Item Recommendation with Pairwise Features. <i>Zhe Wang (Meituan Dianping)</i></li>
-                        <li>A-HA: A Hybrid Approach for Hotel Recommendation. <i>Lee Yi-Ting (National Taiwan University)</i></li>
+                        <li>A-HA: A Hybrid Approach for Hotel Recommendation. <i>Yi-Ting Lee (National Taiwan University)</i></li>
                         <li>Learning to Rank Hotels for Search and Recommendation from Session-based Interaction Logs and Meta Data. <i>Malte Ludewig (TU Dortmund)</i></li>                        
                      </ul>
                   </td>
@@ -266,7 +266,7 @@
                   <td>
                      <strong>Paper Session 3 (each 15+5’)</strong>:
                      <ul class="lead">
-                        <li>A Neural Network for session-based and context-aware recommendations: solution to the RecSys Challenge 2019. <i>Ricardo Gama (Polytechnic Institute of Viseu) and Hugo Fernandes (Rockets of Awesome)</i></li>
+                        <li>An Attentive RNN Model for Session-based and Context-aware Recommendations: A Solution to the RecSys Challenge 2019. <i>Ricardo Gama (Polytechnic Institute of Viseu) and Hugo Fernandes (Rockets of Awesome)</i></li>
                         <li>Leveraging laziness, Browsing-Pattern Aware Stacked Models for Sequential Accommodation Learning to Rank. <i> Federico Piccinini (Politecnico di Milano)</i></li>
                         <li>Accelerating Recommender System Training 15x with RAPIDS. <i>Even Oldridge (NVidia)</i></li>
                         <li>A Pipelined Hybrid Recommender System for Ranking the Items on the Display. <i>Jaehoon Oh (KAIST)</i></li>
@@ -313,8 +313,7 @@
             <li>Mehdi Elahi, Free University of Bozen-Bolzano, Italy</li>
             <li>Dimitris Sacharidis, Vienna University of Technology, Austria</li>
             <li>Hamed Zamani, University of Massachusetts Amherst, USA</li>
-            <li>Vito Walter Anelli, Politecnico di Bari, Italy</li>
-            <li>Amra Delić, TU Wien, Austria</li>
+            <li>Vito Walter Anelli, Politecnico di Bari, Italy</li>            
             <li>Mete Sertkan, Vienna University of Technology, Austria</li>
             <!-- <li>Jens	Adamczak, trivago, Germany</li> -->
             <!-- <li>Philipp	Monreal, trivago, Germany</li> -->
