added paper submission guideline

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -47,7 +47,7 @@
                   <li role="presentation"><a href="#publications">Publications</a></li>
                   <!--<li role="presentation"><a href="#program">Program</a></li>-->
                   <li role="presentation"><a href="#participation">Participation</a></li>
-                  <li role="presentation"><a href="#dates">Timeline</a></li>
+                  <li role="presentation"><a href="#dates">Timeline</a></li>                  
                   <li role="presentation"><a href="#organizers">Organizers</a></li>
                   <li role="presentation"><a href="https://recsys.acm.org/recsys19/" style="color:lightgray;"
                      target="\_blank">RecSys 2019</a></li>
@@ -72,9 +72,6 @@
               downloaded from <a target="\_blank" href="https://recsys.trivago.cloud/">https://recsys.trivago.cloud/</a>.
               You can access the data once you create an account and agree with the terms and conditions. The information on the challenge participation
               can also be found on this website.</p>
-            <font color="green">The current version of the data is version 2. It has been updated on March 26th 2019 UTC with some minor adjustments that affect the order of impressions and prices and the frequency of context descriptions.
-</font>  
-
           </div>
          <div id="dates">
             <h1>Timeline<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span> top</a></sup></h1>
@@ -86,21 +83,21 @@
                      <th>What?</th>
                   </tr>
                </thead>
-               <tbody>                 
+               <tbody>
                   <tr>
                      <td>March 2019</td>
                      <td>
-                        <strong>Dataset Release & RecSys Challenge starts</strong>                        
+                        <strong>Dataset Release & RecSys Challenge starts</strong>
                         <ul>
                               <li>The data can be downloaded from <a target="\_blank" href="https://recsys.trivago.cloud/">https://recsys.trivago.cloud/</a>.</li>
-                        </ul>                        		
-                        <font color="green"><strong>The website will go live on March 05.</strong></font>   
+                        </ul>
+                        <font color="green"><strong>The website will go live on March 05.</strong></font>
                      </td>
                   </tr>
                   <tr>
                      <td>June 30, 2019</td>
-                     <td> <strong>RecSys Challenge ends</strong> 
-                     </br>			
+                     <td> <strong>RecSys Challenge ends</strong>
+                     </br>
                      <font color="green"><strong>Final submission due (11:59 PM in the UTC-12:00 time zone).</strong></font>
                      </td>
                   </tr>
@@ -113,8 +110,18 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>August 2019</td>
-                     <td><strong>Paper Acceptance Notifications</strong></br><strong>Camera-ready due for the accepted papers</strong>
+                     <td>July 22, 2019</td>
+                     <td><strong>Paper submission due</strong></br><font color="green"><strong>See paper submission guidelines</strong></font>
+                     </td>
+                  </tr>
+                  <tr>
+                     <td>August 01, 2019</td>
+                     <td><strong>Paper Acceptance Notifications</strong>
+                     </td>
+                  </tr>
+                  <tr>
+                     <td>August 14, 2019</td>
+                     <td><strong>Camera-ready due</strong> for the accepted papers.
                      </td>
                   </tr>
                   <tr>
@@ -125,10 +132,32 @@
                </tbody>
             </table>
          </div>
+         <!-- GUIDELINES -->
+         <div id="guidelines" class="lead" align="justify">
+           <h1>Paper Submission Guidelines<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span> top</a></sup></h1>
+           <ul>
+              <li>All participants of the challenge are invited to submit if they consider their submission particularly effective, novel, otherwise interesting, or exploiting identified particularities of the data.</li>
+              <li><font color="green"><strong>Note:</strong></font> paper submission is mandatory if you want to be eligible for a prize (top 5). Accepted papers are given an oral and a poster presentation slot at the workshop. At least one author of each accepted paper must attend the workshop and present their work. Please note that a badly written paper or absence of presence at workshop, may prevent you from being eligible for the prize. Please contact the workshop organization if none of the authors will be able to attend the workshop.</li>
+              <li><font color="green"><strong>Page limit:</strong></font> 4 pages + 1 page references  (<a href="https://www.acm.org/publications/proceedings-template">ACM SIG Format</a>)</li>
+              <li>Anonymization of submissions is not required; please include your team name in abstract and text, as well as a link to your code repository, the achieved score, and a reference to the RecSys Challenge Website (<a href="http://www.recsyschallenge.com/2019/">http://www.recsyschallenge.com/2019/</a>). Note: This will be replaced with a reference to an overview paper in the RecSys proceedings for the camera-ready version.</li>
+              <li><font color="green"><strong>Submission website:</strong></font> <a href="https://easychair.org/conferences/?conf=rsc19ws">EasyChair</a></li>
+              <li>The submitted papers will be evaluated based on novelty, clarity, and presented empirical results.</li>
+              <li>Each paper will be reviewed by at least three PC members.</li>
+              <li>Accepted papers will be published in the ACM Digital Library.</li>
+              <li>Accepted papers must be presented in the RecSys Challenge Workshop (either as an oral presentation or poster).</li>
+           </ul>
+           The workshop will feature presentations of accepted contributions to the RecSys Challenge 2019 organized by trivago, TU Wien, Polytechnic University of Bari, and Karlsruhe Institute of Technology. In the challenge, which originates from the domain of online travel recommender systems, participants have to build a click-prediction model based on user session interactions. All submissions presented in the workshop will have gone through a thorough paper review process and describe the best performing or otherwise notable approaches submitted to the challenge.
+           </br></br>
+
+           <font color="green"><strong>Link to the workshop website:</strong></font></br>
+           <a href="https://recsys.acm.org/recsys19/challenge-workshop/">https://recsys.acm.org/recsys19/challenge-workshop/</a>
+
+
+         </div>
          <!-- ORGANIZERS -->
          <div id="organizers" class="lead">
-            <h2>Challenge Organizers <sup><a class="dropup" style="font-size:10px;"
-               href="#top"><span class="caret"></span> top</a></sup></h2>
+            <h1>Challenge Organizers <sup><a class="dropup" style="font-size:10px;"
+               href="#top"><span class="caret"></span> top</a></sup></h1>
             <ul>
                <li><a href="https://www.linkedin.com/in/philipp-monreal-095a2648?originalSubdomain=de" target="\_blank">Philipp Monreal</a>, trivago, Germany</li>
                <li><a href="https://about.me/wolfganggassler" target="\_blank">Wolfgang Gassler</a>, trivago, Germany</li>
@@ -138,14 +167,14 @@
                <li><a href="https://yasdel.github.io" target="\_blank">Yashar Deldjoo</a>, Politecnico di Milano, Italy</li>
                <li><a href="http://www.aifb.kit.edu/web/Farshad_Bakhshandegan_Moghaddam" target="\_blank">Farshad Bakhshandegan Moghaddam</a>, Karlsruhe Institute of Technology, Germany</li>
             </ul>
-<h2>Advisors <sup><a class="dropup" style="font-size:10px;" href="#top"><span
+<h1>Advisors <sup><a class="dropup" style="font-size:10px;" href="#top"><span
 
-                  class="caret"></span> top</a></sup></h2>
+                  class="caret"></span> top</a></sup></h1>
           <ul>
 	    <li><a href="https://www.linkedin.com/in/david-zibriczky/" target="\_blank">Dávid Zibriczky</a>, DB Schenker, Germany</li>
             <li><a href="http://www.cp.jku.at/people/schedl/" target="\_blank">Markus Schedl</a>, Johannes Kepler University, Linz, Austria</li>
 	    <li><a href="https://people.cs.umass.edu/~zamani/" target="\_blank">Hamed Zamani</a>, University of Massachusetts Amherst, MA, USA</li>
-	    <li><a href="https://www.unibz.it/en/faculties/computer-science/academic-staff/person/31096-mehdi-elahi" target="\_blank">Mehdi Elahi</a>, Free University of Bozen, Bolzano</li>            
+	    <li><a href="https://www.unibz.it/en/faculties/computer-science/academic-staff/person/31096-mehdi-elahi" target="\_blank">Mehdi Elahi</a>, Free University of Bozen, Bolzano</li>
           </ul>
          </div>
          <!-- /.container -->
@@ -166,10 +195,8 @@
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             ga('create', 'UA-70716117-1', 'auto');
             ga('send', 'pageview');
-            
-         </script> 
+
+         </script>
       </div>
    </body>
 </html>
-
-
