updated submission due date

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <li role="presentation"><a href="#publications">Publications</a></li>
                   <!--<li role="presentation"><a href="#program">Program</a></li>-->
                   <li role="presentation"><a href="#participation">Participation</a></li>
-                  <li role="presentation"><a href="#dates">Timeline</a></li>                  
+                  <li role="presentation"><a href="#dates">Timeline</a></li>
                   <li role="presentation"><a href="#organizers">Organizers</a></li>
                   <li role="presentation"><a href="https://recsys.acm.org/recsys19/" style="color:lightgray;"
                      target="\_blank">RecSys 2019</a></li>
@@ -111,7 +111,9 @@
                   </tr>
                   <tr>
                      <td>July 22, 2019</td>
-                     <td><strong>Paper submission due</strong></br><font color="green"><strong>See paper submission guidelines</strong></font>
+                     <td><strong>Paper submission due</strong></br>
+                     23:59, AoE (Anywhere on Earth)
+                     </br><font color="green"><strong>See paper submission guidelines</strong></font>
                      </td>
                   </tr>
                   <tr>
