--- a/index.html
+++ b/index.html
@@ -156,8 +156,31 @@
 
 
          </div>
+
          <!-- ORGANIZERS -->
          <div id="organizers" class="lead">
+            <h1>Program Committee <sup><a class="dropup" style="font-size:10px;"
+               href="#top"><span class="caret"></span> top</a></sup></h1>
+            <ul>
+               <li>Derek Bridge, University College Cork, Ireland</li>
+               <li>Catalin-Mihai	Barbu, University of Duisburg-Essen, Germany</li>
+               <li>Himan Abdollahpouri, University of Colorado Boulder, USA</li>
+               <li>Marko Tkalcic, Free University of Bozen-Bolzano, Italy</li>
+               <li>Julia Neidhardt, Vienna University of Technology, Austria</li>
+               <li>David Zibriczky, trivago, Germany</li>
+               <li>Massimo	Quadrana, Pandora, Denmark</li>               
+               <li>Andreu Vall, Johannes Kepler University, Austria</li>
+               <li>Dietmar	Jannach, University of Klagenfurt, Austria</li>
+               <li>Alejandro Bellogin, Universidad Autonoma de Madrid, Spain</li>
+               <li>Amra	Delić, TU Wien, Austria</li>
+               <li>Mehdi Elahi, Free University of Bozen-Bolzano, Italy</li>
+               <li>Dimitris Sacharidis, Vienna University of Technology, Austria</li>
+               <li>Neal	Lathia, Monzo, England</li>
+               <li>Hamed Zamani, University of Massachusetts Amherst, USA</li>
+               <!-- <li>Jens	Adamczak, trivago, Germany</li> -->
+               <!-- <li>Philipp	Monreal, trivago, Germany</li> -->
+               <!-- <li>Gerard-Paul Leyson, trivago, Germany</li> -->
+            </ul>
             <h1>Challenge Organizers <sup><a class="dropup" style="font-size:10px;"
                href="#top"><span class="caret"></span> top</a></sup></h1>
             <ul>
