--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
                <li>Alejandro Bellogin, Universidad Autonoma de Madrid, Spain</li>
                <li>Amra	Delić, TU Wien, Austria</li>
                <li>Mehdi Elahi, Free University of Bozen-Bolzano, Italy</li>
-               <li>Dimitris Sacharidis, Vienna University of Technology, Austria</li>
-               <li>Neal	Lathia, Monzo, England</li>
+               <li>Dimitris Sacharidis, Vienna University of Technology, Austria</li>               
                <li>Hamed Zamani, University of Massachusetts Amherst, USA</li>
+               <li>Vito Walter Anelli, Politecnico di Bari, Italy</li>
+               <li>Amra Delić, TU Wien, Austria</li>
+               <li>Mete Sertkan, Vienna University of Technology, Austria</li>
                <!-- <li>Jens	Adamczak, trivago, Germany</li> -->
                <!-- <li>Philipp	Monreal, trivago, Germany</li> -->
                <!-- <li>Gerard-Paul Leyson, trivago, Germany</li> -->
