--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          </div>
          <div id="Publications" class="lead" align="justify">
                <h1>Publications</h1>
-               <p>"<a target="\_blank" href="https://arxiv.org/pdf/1908.00071.pdf">Session-Based Hotel Recommendations:Challenges and Future Directions</a>" Jens Adamczak, Gerard-Paul Leyson, Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, JuliaNeidhardt, Wolfgang Wörndl, Philipp Monreal</p>
+               <p>"<a target="\_blank" href="https://arxiv.org/pdf/1908.00071.pdf">Session-Based Hotel Recommendations:Challenges and Future Directions</a>" Jens Adamczak, Gerard-Paul Leyson, Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Julia Neidhardt, Wolfgang Wörndl, Philipp Monreal. <a href="https://drive.google.com/open?id=1rc8BUAAj2rkKvFk5UBzutMJRbnxWXsYp">BibTex</a></p>
              </div>
          <div id="participation" class="lead" align="justify">
             <h1>Participation and Data</h1>
