--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
          <div id="Publications" class="lead" align="justify">
                <h1>Publications</h1>
                <p>"<a target="\_blank" href="https://arxiv.org/pdf/1908.00071.pdf">Session-Based Hotel Recommendations:Challenges and Future Directions</a>" Jens Adamczak, Gerard-Paul Leyson, Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Julia Neidhardt, Wolfgang Wörndl, Philipp Monreal. <a href="https://drive.google.com/open?id=1rc8BUAAj2rkKvFk5UBzutMJRbnxWXsYp">BibTex</a></p>
+               <p>"<a target="\_blank" href="https://drive.google.com/open?id=1Y-kkaK-oqDoE6OuyXFgfVabrGZV_dVBb">RecSys Challenge 2019: Session-based Hotel Recommendations</a>" Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Jens Adamczak, Gerard-Paul Leyson, Philipp Monreal. <a href="https://drive.google.com/open?id=1rheYPS-sHZCxB8Y7_zHwAcI6Kfx3LIJB">BibTex</a></p>               
              </div>
          <div id="participation" class="lead" align="justify">
             <h1>Participation and Data</h1>
