--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
          </div>
          <div id="Publications" class="lead" align="justify">
                <h1>Publications</h1>
-               <p>"<a target="\_blank" href="https://arxiv.org/pdf/1908.00071.pdf">Session-Based Hotel Recommendations:Challenges and Future Directions</a>" Jens Adamczak, Gerard-Paul Leyson, Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Julia Neidhardt, Wolfgang Wörndl, Philipp Monreal. <a href="https://drive.google.com/open?id=1rc8BUAAj2rkKvFk5UBzutMJRbnxWXsYp">BibTex</a></p>
-               <p>"<a target="\_blank" href="https://drive.google.com/open?id=1Y-kkaK-oqDoE6OuyXFgfVabrGZV_dVBb">RecSys Challenge 2019: Session-based Hotel Recommendations</a>" Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Jens Adamczak, Gerard-Paul Leyson, Philipp Monreal. <a href="https://drive.google.com/open?id=1rheYPS-sHZCxB8Y7_zHwAcI6Kfx3LIJB">BibTex</a></p>               
+               <p>Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Jens Adamczak, Gerard-Paul Leyson, and Philipp Monreal. 2019. "<a target="\_blank" href="https://drive.google.com/open?id=1Y-kkaK-oqDoE6OuyXFgfVabrGZV_dVBb">RecSys Challenge 2019: Session-based Hotel Recommendations."</a> In Thirteenth ACM Conference on Recommender Systems (RecSys ’19), September 16–20, 2019, Copenhagen, Denmark. ACM, New York, NY, USA, 2 pages. https://doi.org/10.1145/3298689.3346974, <a href="https://drive.google.com/open?id=1YkWvTRgkWwyAwplnSgS1myw3b7Sk5CrS">BibTex</a></p>
+               <p>Jens Adamczak, Gerard-Paul Leyson, Peter Knees, Yashar Deldjoo, Farshad Bakhshandegan Moghaddam, Julia Neidhardt, Wolfgang Wörndl, and Philipp Monreal. 2019. "<a target="\_blank" href="https://arxiv.org/pdf/1908.00071.pdf">Session-Based Hotel Recommendations: Challenges and Future Directions."</a> arXiv:1908.00071, <a href="https://drive.google.com/open?id=1qswDKxcMi6zNvR5buCFuh5SOoJahH8rU">BibTex</a></p>               
              </div>
          <div id="participation" class="lead" align="justify">
             <h1>Participation and Data</h1>
