extend the camera ready deadline

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>August 14, 2019</td>
-                     <td><strong>Camera-ready due</strong> for the accepted papers.
-                     </td>
+                     <td><strike>August 14, 2019</strike></td>
+                     <td><strong>Camera-ready due</strong> for the accepted papers.<br>
+                        <font color="green"><strong>Extended to August 28, 2019</strong></font></td>
                   </tr>
                   <tr>
                      <td>September 16-20, 2019</td>
