--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
       <div id="about" class="lead" align="justify">
          <h1>About</h1>
          <p> The RecSys Challenge 2019 will be organized by <a href="http://www.trivago.com">trivago</a>, <a
-               href="https://www.tuwien.ac.at/">TU Wien</a>, <a href="https://www.polimi.it/en">Politecnico di
-               Milano</a>, and <a href="http://www.kit.edu/">Karlsruhe Institute of Technology</a>. trivago is a global
+               href="https://www.tuwien.ac.at/">TU Wien</a>, <a href="http://www.en.poliba.it/">Polytechnic University of Bari</a>, and <a href="http://www.kit.edu/">Karlsruhe Institute of Technology</a>. trivago is a global
             hotel search platform focused on reshaping the way travelers search for and compare hotels, while enabling
             advertisers of hotels to grow their businesses by providing access to a broad audience of travelers via our
             websites and apps. trivago has established 55 localized platforms in over 190 countries and provides access
