updated a presenter of the paper

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                      <strong>Paper Session 2 (each 25+5’)</strong>:
                      <ul class="lead">
                         <li>Session-based Item Recommendation with Pairwise Features. <i>Zhe Wang (Meituan Dianping)</i></li>
-                        <li>A-HA: A Hybrid Approach for Hotel Recommendation. <i>Yi-Ting Lee (National Taiwan University)</i></li>
+                        <li>A-HA: A Hybrid Approach for Hotel Recommendation. <i>Kung-Hsiang Huang (RosettaAI)</i></li>
                         <li>Learning to Rank Hotels for Search and Recommendation from Session-based Interaction Logs and Meta Data. <i>Malte Ludewig (TU Dortmund)</i></li>                        
                      </ul>
                   </td>
